--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-sass-transformer": "^3.0.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "react-native-youtube-iframe": "^2.4.1"
+    "react-native-youtube-iframe": "^2.4.1",
+    "sass": "^1.94.0",
+    "styled-components": "^6.1.19"
   },
   "private": true
 }
