--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "sass": "^1.94.0",
     "styled-components": "^6.1.19"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "metro-react-native-babel-transformer": "^0.77.0"
+  }
 }
